--- a/package.json
+++ b/package.json
@@ -4,13 +4,19 @@
   "description": "[![Build Status](https://travis-ci.org/chkakaja/sentimize.svg?branch=master)](https://travis-ci.org/chkakaja/sentimize)",
   "main": "index.js",
   "dependencies": {
+    "babel-polyfill": "^6.9.1",
     "bluebird": "^3.4.1",
     "body-parser": "^1.15.2",
+    "chai": "^3.5.0",
+    "dotenv": "^2.0.0",
     "eslint": "^2.13.1",
     "express": "^4.14.0",
+    "mocha": "^2.5.3",
+    "morgan": "^1.7.0",
     "nodemon": "^1.9.2",
     "redis": "^2.6.2",
-    "superagent": "^2.0.0"
+    "superagent": "^2.0.0",
+    "supertest": "^1.2.0"
   },
   "devDependencies": {
     "eslint": "^2.13.1",
@@ -20,8 +26,9 @@
     "eslint-plugin-react": "^5.2.2"
   },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server/master.js"
+    "test": "./node_modules/.bin/mocha --reporter spec ./test/*-spec.js",
+    "start": "NODE_ENV=development ./node_modules/.bin/nodemon server/master.js",
+    "lint": "./node_modules/.bin/eslint ./"
   },
   "repository": {
     "type": "git",
