--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
   "scripts": {
     "test": "./node_modules/.bin/mocha --reporter spec ./test/*-spec.js",
     "start": "NODE_ENV=development ./node_modules/.bin/nodemon server/master.js",
-    "lint": "./node_modules/.bin/eslint ./"
+    "lint": "./node_modules/.bin/eslint ./",
+    "seed": "node test/seed.js"
   },
   "repository": {
     "type": "git",
